# oarepo-vocabularies

./: .eslintrc.js  .gitignore  MANIFEST.in  README.md  babel.cfg  babel.ini  build.sh  docker-compose.test.yml  docker-compose.yml  extract_messages.sh  format.sh  generate_models.sh  generate_setup_cfg.sh  local_install.sh  oarepo.yaml  package.json  pyproject.toml  run-tests.sh  run.sh  setup-basic-local.cfg  setup-basic.cfg  setup-library.cfg  setup-model-builder.cfg  setup-proto.cfg  setup.cfg  setup.py
.github/workflows/: build.yaml  codeql.yml  main.yaml  main.yml  manual.yaml  manual2.yaml  push.yaml  pypi-publish.yml  test.yaml  tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  rest.rst  usage.rst
hierarchical_vocabularies/: __init__.py  cli.py  config.py  ext.py  utils.py  version.py  views.py
hierarchical_vocabularies/records/: api.py
hierarchical_vocabularies/resources/: __init__.py  resource.py
hierarchical_vocabularies/services/: __init__.py  components.py  schema.py  service.py
oarepo-vocabularies/: README.rst  setup.cfg
oarepo-vocabularies-basic/: README.rst  setup.cfg
oarepo-vocabularies-basic/oarepo_vocabularies_basic/: config.py  ext.py  proxies.py  views.py
oarepo-vocabularies-basic/oarepo_vocabularies_basic/records/: api.py  dumper.py  models.py
oarepo-vocabularies-basic/oarepo_vocabularies_basic/records/jsonschemas/: oarepo-vocabularies-basic-1.0.0.json
oarepo-vocabularies-basic/oarepo_vocabularies_basic/resources/: config.py  resource.py
oarepo-vocabularies-basic/oarepo_vocabularies_basic/services/: config.py  permissions.py  search.py  service.py
oarepo-vocabularies-model-builder/: __init__.py  setup.cfg
oarepo-vocabularies-model-builder/oarepo_vocabularies_model_builder/: property_preprocessors.py  vocabulary_settings.json5
oarepo-vocabularies-model-builder/oarepo_vocabularies_model_builder/models/: hvocabulary-basic-model.yaml  registration.py
oarepo-vocabularies/oarepo_vocabularies/: ext.py
oarepo-vocabularies/oarepo_vocabularies/basic/: config.py
oarepo-vocabularies/oarepo_vocabularies/basic/records/: dumper.py
oarepo-vocabularies/oarepo_vocabularies/basic/records/mappings/v7/oarepo_vocabularies.basic/: oarepo-vocabularies.basic-1.0.0.json
oarepo-vocabularies/oarepo_vocabularies/basic/resources/: config.py  resource.py
oarepo-vocabularies/oarepo_vocabularies/basic/services/: permissions.py  schema.py  service.py
oarepo-vocabularies/oarepo_vocabularies/datastreams/: catalogue.py  excel.py  hierarchy.py
oarepo-vocabularies/oarepo_vocabularies/models/: hvocabulary-basic-model.yaml  hvocabulary-basic.yaml  hvocabulary.yaml
oarepo-vocabularies/oarepo_vocabularies/records/: dumper.py  models.py
oarepo-vocabularies/oarepo_vocabularies/records/system_fields/: hierarchy.py  pid_hierarchy.py  pid_hierarchy_relation.py
oarepo-vocabularies/oarepo_vocabularies/resources/: config.py  converter.py  resource.py
oarepo-vocabularies/oarepo_vocabularies/services/: config.py  schema.py  search.py  service.py
oarepo_vocabularies/: __init__.py  cli.py  config.py  errors.py  ext.py  ext_config.py  fixtures.py  for_translations_only.py  hacks.py  proxies.py  tasks.py  views.py
oarepo_vocabularies/alembic/: 1765979850_oarepo_vocabularies_branch.py  1765980060_create_hierarchy_table.py  __init__.py
oarepo_vocabularies/authorities/: __init__.py  clients.py  components.py  ext.py  ext_config.py  providers.py  proxies.py  results.py  service.py  views.py
oarepo_vocabularies/basic/: ext.py  views.py
oarepo_vocabularies/datastreams/: catalogue.py
oarepo_vocabularies/fixtures/: __init__.py  excel.py  fixtures.py  tasks.py  yaml_csv_json.py
oarepo_vocabularies/models/: hvocabulary-basic-model.yaml  ui.json
oarepo_vocabularies/records/: __init__.py  api.py  models.py  systemfields.py
oarepo_vocabularies/resources/: __init__.py  config.py  resource.py  ui.py
oarepo_vocabularies/services/: __init__.py  cache.py  config.py  facets.py  permissions.py  schema.py  schemas.py  search.py  service.py  type_ui_schema.py  ui_schema.py  ui_schemas.py
oarepo_vocabularies/translations/: __init__.py  messages.mo  messages.pot
oarepo_vocabularies/ui/: __init__.py  config.py  ext.py  proxies.py  utils.py  views.py
oarepo_vocabularies/views/: __init__.py  api.py  app.py
oarepo_vocabularies_model_builder/models/: hvocabulary-basic-model.yaml  hvocabulary-basic.yaml  hvocabulary.yaml
tests/: __init__.py  conftest.py  customfields.py  languages.yaml  manifest.json  simple_model.py  test_authorities.py  test_authorities_clients.py  test_cache.py  test_cf.py  test_complex_import.py  test_crud_hierarchy_resource.py  test_crud_hierarchy_service.py  test_crud_resource.py  test_crud_service.py  test_datastreams.py  test_db.py  test_dump_options.py  test_empty_record.py  test_form_config.py  test_hierarchy.py  test_hierarchy_model.py  test_icu_sort.py  test_import.py  test_languages.py  test_model.yaml  test_no_hierarchy.py  test_openaire.py  test_orcid.py  test_permissions.py  test_relations.py  test_relations_generated.py  test_relations_in_cf.py  test_relations_list.py  test_relations_list_generated.py  test_save_with_languages.py  test_serializations.py  test_service.py  test_services.py  test_specialized_services.py  (+10 more)
tests/cfdata/: languages.yaml
tests/complex-data/: accessRights.xlsx  catalogue.yaml  contributorType.xlsx  countries.xlsx  funders.xlsx  institutions.xlsx  institutions_old.xlsx  itemRelationType.xlsx  languages.xlsx  licenses.xlsx  onetime_transform_institutions.py  resourceType.xlsx  resourceType_relatedItem.xlsx  subjectCategories.xlsx  vocabularies.yaml
tests/data/: catalogue.yaml  funders-loaded.json  funders.xlsx  institutions-transformed.json  institutions.xlsx  languages.yaml  test.xlsx  vocabularies.yaml
tests/icudata/: catalogue.yaml  languages.yaml
tests/mock_module/: api.py  resources.py  schema.py  services.py
tests/mock_module_gen/: config.py  ext.py  proxies.py  views.py
tests/names-data/: catalogue.yaml  names.yaml
tests/schemas/: award-v1.0.0.json  name-v1.0.0.json
(+269 files in other folders)
