[build_system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[project]
name = "oarepo-vocabularies"
dynamic = ["version"]
description = "Support for custom fields and hierarchy on Invenio vocabularies"
authors = [
    { name = "Mirek Simek", email = "miroslav.simek@cesnet.cz" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "oarepo-runtime>=2.0.0dev0,<3.0.0",
    "openpyxl",
    "oarepo-ui>=6.0.0dev0,<7.0.0",
    "cachetools",
    "orcid",
    "oarepo[rdm,tests]>=14,<15",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-vocabularies"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "black",
    "autoflake",
    "isort",
]
tests = [
    "pytest>=7.1.2",
    "pytest-mock",
    "pytest-invenio",
    "types-requests"
]
oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[tool.setuptools.packages.find]
include = ["oarepo_vocabularies*"]
exclude = ["tests"]

[tool.setuptools]
include-package-data = true

[project.entry-points."invenio_base.apps"]
oarepo_vocabularies = "oarepo_vocabularies.ext:OARepoVocabularies"
oarepo_vocabularies_ui = "oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension"

[project.entry-points."invenio_base.api_apps"]
oarepo_vocabularies = "oarepo_vocabularies.ext:OARepoVocabularies"
oarepo_vocabularies_ui = "oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension"

[project.entry-points."invenio_jsonschemas.schemas"]
oarepo_vocabularies = "oarepo_vocabularies.records.jsonschemas"

[project.entry-points."invenio_base.blueprints"]
oarepo_ui = "oarepo_vocabularies.views.app:create_app_blueprint"
oarepo_vocabularies_ui = "oarepo_vocabularies.ui.views:create_blueprint"
oarepo_vocabulary_type_ui = "oarepo_vocabularies.ui.views:create_vocabulary_type_blueprint"

[project.entry-points."invenio_base.api_blueprints"]
oarepo_vocabulary_type_api = "oarepo_vocabularies.views.api:create_api_blueprint"

[project.entry-points."invenio_assets.webpack"]
oarepo_vocabularies_ui_theme = "oarepo_vocabularies.ui.theme.webpack:theme"

[project.entry-points."invenio_base.finalize_app"]
oarepo_vocabularies = "oarepo_vocabularies.ext:finalize_app"
oarepo_vocabularies_ui = "oarepo_vocabularies.ui.ext:finalize_app"

[project.entry-points."oarepo.ui"]
oarepo_vocabularies_ui = "oarepo_vocabularies.models:ui.json"

[project.entry-points."invenio_i18n.translations"]
oarepo_vocabularies_ui = "oarepo_vocabularies"

[tool.oarepo.i18n]
languages = ["cs", "en"]
babel_source_paths = ["oarepo_vocabularies/"]
i18next_source_paths = ["oarepo_vocabularies/ui/theme/assets/semantic-ui/js"]
babel_output_translations = ["oarepo_vocabularies/translations"]
i18next_output_translations = ["oarepo_vocabularies/ui/theme/assets/semantic-ui/translations/oarepo_vocabularies_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# Ignore missing type hints for some third-party libraries
ignore_missing_imports = true