[metadata]
name = oarepo-vocabularies
version = 1.0.17
description = Support for custom fields and hierarchy on Invenio vocabularies
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    invenio-vocabularies
    oarepo-runtime
    openpyxl
    oarepo-ui

[options.extras_require]
devs =
    pytest>=7.1.2
    black
    autoflake
    isort
tests =
    pytest>=7.1.2
    pytest-invenio
    oarepo>=11,<12

[options.entry_points]
invenio_base.apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabularies
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension
invenio_base.api_apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabularies
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension
invenio_jsonschemas.schemas =
    oarepo_vocabularies = oarepo_vocabularies.records.jsonschemas
invenio_base.blueprints =
    oarepo_ui = oarepo_vocabularies.views:blueprint
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.views:create_blueprint
invenio_assets.webpack =
    oarepo_vocabularies_ui_theme = oarepo_vocabularies.ui.theme.webpack:theme
oarepo.ui = oarepo_vocabularies_ui = oarepo_vocabularies.models:ui.json
invenio_i18n.translations = oarepo_vocabularies_ui = oarepo_vocabularies

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2, *.html
oarepo_vocabularies.ui = templates/semantic-ui/oarepo_vocabularies_ui/*.html, theme/webpack.py, ./theme/assets/semantic-ui/less/oarepo_vocabularies_ui/*, ./theme/assets/semantic-ui/less/oarepo_vocabularies_ui/theme/elements/*, ./theme/assets/semantic-ui/less/oarepo_vocabularies_ui/definitions/*, ./theme/assets/semantic-ui/js/oarepo_vocabularies_ui/*
oarepo_vocabularies = translations/messages.pot, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*

[tool:pytest]
testpaths =
    tests

