[metadata]
name = oarepo-vocabularies
version = 2.0.55
description = Support for custom fields and hierarchy on Invenio vocabularies
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    invenio-vocabularies
    oarepo-runtime
    openpyxl
    oarepo-ui>=5.0.34
    cachetools
packages = find:
include_package_data = True

[options.extras_require]
devs =
    pytest>=7.1.2
    black
    autoflake
    isort
tests =
    pytest>=7.1.2
    pytest-mock
    pytest-invenio
oarepo-11 =
    oarepo>=11,<12
oarepo-12 =
    oarepo>=12,<13

[options.entry_points]
invenio_base.apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabularies
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension
    oarepo_vocabulary_authorities = oarepo_vocabularies.authorities.ext:OARepoVocabulariesAuthorities
invenio_base.api_apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabularies
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension
    oarepo_vocabulary_authorities = oarepo_vocabularies.authorities.ext:OARepoVocabulariesAuthorities
invenio_jsonschemas.schemas =
    oarepo_vocabularies = oarepo_vocabularies.records.jsonschemas
invenio_base.blueprints =
    oarepo_ui = oarepo_vocabularies.views.app:create_app_blueprint
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.views:create_blueprint
    oarepo_vocabulary_type_ui = oarepo_vocabularies.ui.views:create_vocabulary_type_blueprint
invenio_base.api_blueprints =
    oarepo_vocabulary_type_api = oarepo_vocabularies.views.api:create_api_blueprint
    oarepo_vocabulary_authorities = oarepo_vocabularies.authorities.views:create_authorities_blueprint
invenio_assets.webpack =
    oarepo_vocabularies_ui_theme = oarepo_vocabularies.ui.theme.webpack:theme
oarepo.ui = oarepo_vocabularies_ui = oarepo_vocabularies.models:ui.json
invenio_i18n.translations = oarepo_vocabularies_ui = oarepo_vocabularies

[options.packages.find]
exclude = tests

[tool:pytest]
testpaths =
    tests

