[metadata]
name = oarepo-vocabularies
version = 2.1.19
description = Support for custom fields and hierarchy on Invenio vocabularies
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.10
install_requires =
    invenio-vocabularies
    oarepo-runtime>=1.4.44
    openpyxl
    oarepo-ui>=5.0.91
    cachetools
    orcid
packages = find:
include_package_data = True

[options.extras_require]
dev =
    pytest>=7.1.2
    black
    autoflake
    isort
tests =
    pytest>=7.1.2
    pytest-mock
    pytest-invenio

[options.entry_points]
invenio_base.apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabularies
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension
    oarepo_vocabulary_authorities = oarepo_vocabularies.authorities.ext:OARepoVocabulariesAuthorities
invenio_base.api_apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabularies
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.ext:InvenioVocabulariesAppExtension
    oarepo_vocabulary_authorities = oarepo_vocabularies.authorities.ext:OARepoVocabulariesAuthorities
invenio_jsonschemas.schemas =
    oarepo_vocabularies = oarepo_vocabularies.records.jsonschemas
invenio_base.blueprints =
    oarepo_ui = oarepo_vocabularies.views.app:create_app_blueprint
    oarepo_vocabularies_ui = oarepo_vocabularies.ui.views:create_blueprint
    oarepo_vocabulary_type_ui = oarepo_vocabularies.ui.views:create_vocabulary_type_blueprint
    oarepo_vocabulary_awards_ui = oarepo_vocabularies.ui.views:create_vocabulary_awards_blueprint
invenio_base.api_blueprints =
    oarepo_vocabulary_type_api = oarepo_vocabularies.views.api:create_api_blueprint
    oarepo_vocabulary_authorities = oarepo_vocabularies.authorities.views:create_authorities_blueprint
invenio_assets.webpack =
    oarepo_vocabularies_ui_theme = oarepo_vocabularies.ui.theme.webpack:theme
invenio_base.finalize_app =
    oarepo_vocabularies = oarepo_vocabularies.ext:finalize_app
invenio_base.api_finalize_app =
    oarepo_vocabularies = oarepo_vocabularies.ext:finalize_app
oarepo.ui = oarepo_vocabularies_ui = oarepo_vocabularies.models:ui.json
invenio_i18n.translations = oarepo_vocabularies_ui = oarepo_vocabularies

[oarepo.i18n]
languages =
    cs
    en

# List of paths to scan for babel messages - python files and jinja templates are scanned
babel_source_paths =
    oarepo_vocabularies/

# List of paths to scan for i18next messages - javascript and jsx files are scanned
i18next_source_paths =
    oarepo_vocabularies/ui/theme/assets/semantic-ui/js

# this is the location where python translations are generated.
babel_output_translations =
    oarepo_vocabularies/translations

# this is the location where javascript translations are generated. Add this directory to webpack
# aliases
i18next_output_translations =
    oarepo_vocabularies/ui/theme/assets/semantic-ui/translations/oarepo_vocabularies_ui

[options.packages.find]
exclude = tests

[tool:pytest]
testpaths =
    tests

