# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 National library of technology, Prague.
#
# OARepo-Vocabularies is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = oarepo-vocabularies
version = attr: oarepo_vocabularies.version.__version__
description = "An extension to the invenio module for managing hierarchical vocabularies. "
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = invenio vocabulary management
license = MIT
author = techlib.cz
author_email = miroslav.simek@gmail.com
platforms = any
url = https://github.com/oarepo/oarepo-vocabularies
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:

python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-vocabularies>=0.11.6
    openpyxl>=3.0.0<4.0.0

[options.package_data]
* = *.yaml, *.json

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.3
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.11
    Sphinx>=4.5
    invenio-vocabularies>=0.11.6
    openpyxl>=3.0.0<4.0.0
    Werkzeug<2.2.0      # workaround for Flask-Login == 0.6.1 - not compatible but deps ok


elasticsearch6 =
    invenio-search[elasticsearch6]>=1.4.2,<2.0

elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0
# Kept for backwards compatibility:
mysql =
postgresql =
sqlite =

[options.entry_points]
invenio_base.apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabulariesExt
invenio_base.api_apps =
    oarepo_vocabularies = oarepo_vocabularies.ext:OARepoVocabulariesExt
oarepo.models =
    hvocabulary = oarepo_vocabularies.models.registration:hvocabulary

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --doctest-glob="*.rst" --doctest-modules
; addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=oarepo_vocabularies --cov-report=term-missing
testpaths = tests oarepo_vocabularies
